--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "format": "prettier --write --ignore-unknown **/*",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "testw": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "lint": "npx eslint src/* --fix"
+    "lint": "npx eslint src/* --fix",
+    "genesis" : "node --experimental-vm-modules src/cli.js genesis",
+    "next" : "node --experimental-vm-modules src/cli.js next"
+
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
@@ -40,5 +43,8 @@
   },
   "engines": {
     "node": ">=18.14.0"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.2"
   }
 }
