adding js project into it

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,17 @@ release/
 *.dot
 *.log
 *.ign
+
+# NodeJS
+build
+node_modules
+coverage
+
+# Editor
+.vscode
+
+# System
+.DS_Store
+
+# Never commit keys to Git!
+keys
